// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": "1",
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": "2",
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": "3",
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": "4",
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": "5",
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": Array [
      1,
    ],
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": Array [
      "1",
    ],
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": Array [
      2,
    ],
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": Array [
      "2",
    ],
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 10`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": Array [
      5,
    ],
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 11`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": Array [
      "5",
    ],
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 12`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "maxValue": 5,
      "type": "Max",
    },
    "value": 10,
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 13`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "isExclusive": false,
      "minValue": 1,
      "type": "Min",
    },
    "value": 0,
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 14`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": NaN,
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 15`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": Infinity,
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 16`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": -Infinity,
  },
]
`;

exports[`v.and(...) v.and(v.safeInteger, v.min(1), v.max(5)) 17`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "SafeInteger",
    },
    "value": 1.5,
  },
]
`;
